--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
+    "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react-app": "^3.1.0",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -17,10 +20,14 @@
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.0.1",
     "eslint-loader": "1.9.0",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-css-modules": "^2.7.5",
     "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.4.0",
+    "express": "^4.16.2",
+    "express-http-proxy": "^1.1.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
@@ -42,6 +49,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
+    "server": "NODE_ENV=development babel-node --presets=env,stage-2 server/index.js",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js"
   },
