--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "webpack-manifest-plugin": "1.3.2"
   },
   "scripts": {
     "server": "NODE_ENV=development babel-node --presets=env,stage-2 server/index.js",
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js"
+    "start": "BABEL_ENV=development NODE_ENV=development babel-node --presets=env,stage-2 scripts/start.js",
+    "build": "BABEL_ENV=production NODE_ENV=production babel-node --presets=env,stage-2 scripts/build.js",
+    "lint": "eslint config scripts server src"
   },
   "babel": {
     "presets": [
