--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,6 @@
   "name": "Find your pitch, find your investor",
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#0f0a0a",
+  "background_color": "#fffafa"
 }
