--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "babel-preset-react-app": "^3.1.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "6.26.0",
+    "body-parser": "^1.18.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "cookie-parser": "^1.4.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "eslint": "4.10.0",
