--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.1.1",
     "react-fontawesome": "^1.6.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
