--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.6.0",
     "raf": "3.4.0",
     "react": "^16.1.1",
     "react-dev-utils": "^4.2.1",
@@ -47,6 +48,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "style-loader": "0.19.0",
+    "superagent": "^3.8.1",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
