:checkered_flag: Add the last changes
Signed-off-by: Marius Tulbure <marius@figshare.com>

--- a/nginx/inview.dev.conf
+++ b/nginx/inview.dev.conf
@@ -1,10 +1,15 @@
-upstream pitch_server {
+upstream webpack_dev {
+    server 127.0.0.1:3000;
+}
+
+
+upstream inview_server_dev {
     server 127.0.0.1:3001;
 }
 
 server {
     listen 80;
-    server_name  pitch.you;
+    server_name  inview.dev;
 
     client_max_body_size 5G;
 
@@ -19,6 +24,10 @@ server {
     }
 
     location / {
-        proxy_pass http://pitch_server;
+        proxy_pass http://webpack_dev;
+    }
+
+    location /api {
+        proxy_pass http://inview_server_dev;
     }
 }
